# poetry-group1

./: pep621.yaml  pyproject.toml  traditional.yaml
.github/: dependabot.yaml  dependabot.yml
pep621/: pyproject.toml
traditional/: pyproject.toml
